Bug Fix
- Fixed bug that would cause horizontal scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -348,8 +348,8 @@ p.cover-image                               { text-align: center; }
 .datasets-list > li                         { padding: 10px; margin-bottom: 10px; background-color: #eee; font-size: 12px; font-weight: 300; }
 .datasets-list > li > a                     { display: block; color: #474747; }
 .post-section.comments                      { margin-top: 30px; }
-@media (max-width: 767px)                           { .tools-item { width: 86.5%; } }
-@media (min-width: 768px) and (max-width: 991px)    { .tools-item { width: 86.5%; } }
+@media (max-width: 767px)                           { .posts-container .row { display: block; width: 110%; } .tools-item { width: 86.5%; float: none; } }
+@media (min-width: 768px) and (max-width: 991px)    { .posts-container .row { display: block; width: 110%; } .tools-item { width: 86.5%; float: none; } }
 
 /***********************
     APPS STYLES
